--- a/templates/configuration.html
+++ b/templates/configuration.html
@@ -18,7 +18,87 @@
     </header>
 
     <main>
-        
+        <div class="config-align-center">
+            <div class="align-game-button" >
+                <label class="switch">
+                    <input checked type="checkbox" />
+                    <span class="slider round"></span>
+                    <h6>Off : En - On : Fr</h6>
+                </label> 
+                <label class="switch">
+                    <input checked type="checkbox" />
+                    <span class="slider round"></span>
+                    <h6>On (checked)</h6>
+                </label>
+                <select class="box">
+                  <option>Très Facile</option>
+                  <option>Facile</option>
+                  <option>Moyen</option>
+                  <option>Option 4</option>
+                  <option>Option 5</option>
+                </select>
+            </div>
+            <div>
+                <label class="switch">
+                    <input checked type="checkbox" />
+                    <span class="slider round"></span>
+                    <h6>On (checked)</h6>
+                </label> 
+                <label class="switch">
+                    <input checked type="checkbox" />
+                    <span class="slider round"></span>
+                    <h6>On (checked)</h6>
+                </label>
+            </div>
+
+            <!-- <div>
+                <form action="/reset-game" method="POST">
+                    <label class="switch">
+                        <input checked type="checkbox" />
+                        <span class="slider round"></span>
+                        <h6>On (checked)</h6>
+                    </label> 
+                </form>
+                <label class="switch">
+                    <input checked type="checkbox" />
+                    <span class="slider round"></span>
+                    <h6>On (checked)</h6>
+                </label>
+                <label class="switch">
+                    <input type="checkbox" />
+                    <span class="slider round"></span>
+                    <h6>Off (checked)</h6>
+                </label>
+                
+                <label class="switch">
+                        <input type="checkbox" />
+                        <span class="slider round"></span>
+                        <h6>On (checked)</h6>
+                </label>
+                <div class="box">
+                    <select>
+                      <option>Option 1</option>
+                      <option>Option 2</option>
+                      <option>Option 3</option>
+                      <option>Option 4</option>
+                      <option>Option 5</option>
+                    </select>
+                </div> 
+            </div>            
+            <div>
+                <label class="switch">
+                    <input type="checkbox" />
+                    <span class="slider round"></span>
+                    <h6>On (checked)</h6>
+                </label>
+                <label class="switch">
+                    <input type="checkbox" />
+                    <span class="slider round"></span>
+                    <h6>Off (checked)</h6>
+                </label>    
+            </div>
+        </div> -->
+
     </main>
 
 </body>
